--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,44 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  background-color: #999;
+  color: aliceblue;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.inp-2{
+  margin: 10px 0;
+  height: 250px;
+  overflow: scroll;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.post {
+  border: 2px solid white;
+  margin: 10px;
+  border-radius: 5px;
+}
+
+.iconsWrap {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-around;
 }
 
-.App-link {
-  color: #61dafb;
+.iconsWrap span:hover {
+  color: yellow;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.post-title {
+  font-size: 22px;
+  font-weight: 900;
+  text-transform: uppercase;
+}
+
+.dttm {
+  font-size: 16px;
+  text-align: right;
+
+}
+
+button {
+  margin: 10px;
 }
